--- a/QRCodeGenerator/QRCodeGenerator.csproj
+++ b/QRCodeGenerator/QRCodeGenerator.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="QRCoder" Version="1.3.5" />
+    <PackageReference Include="NDesk.Options" Version="0.2.1" />
+  </ItemGroup>
 </Project>
